# CSAM-IPD-HALH

./: .gitignore  README.md  pyproject.toml
csam_project/: JUDGES_PLAYBOOK.md  PANEL_PRESENTATION_PLAN.md  colab_csam_ablation.ipynb  colab_csam_variance.ipynb  requirements.txt  results_5npcs.json  results_e2e.json  results_lru.json  results_no_forgetting.json
csam_project/benchmarks/: __init__.py  benchmark_baseline_rag.py  benchmark_e2e.py  benchmark_hotpotqa.py  benchmark_locomo.py  benchmark_multimodel.py  benchmark_musique.py  benchmark_scaling.py  generate_charts.py  generate_diagrams.py  results_baseline_rag.json  results_hotpotqa_summary.json  results_locomo_test.json  results_multimodel_summary.json  results_musique_summary.json  sustained_conversation.py
csam_project/csam_core/: __init__.py  consolidation.py  consolidation_tracker.py  forgetting_engine.py  knowledge_graph.py  memory_repository.py  memory_repository_gpu.py  memory_repository_persistent.py  mmr.py  retrieval.py  working_memory.py
csam_project/docs/: README.md  benchmark_documentation.md  comprehensive_results_report.md  implementation_plan.md  legacy_vs_new_comparison_readme.md
csam_project/evaluation/: __init__.py  ablation_results_v3.json  ablation_results_v4.json  ablation_results_v5.json  grid_search_results.json  grid_search_weights.py  npc_locomo.py  run_ablation.py  threshold_sweep.py  threshold_sweep_results.json  threshold_sweep_results_v2.json  variance_runner.py
csam_project/paper/: generate_poster_diagrams.py  poster_content.md
csam_project/research/: extract_pdf.py  (+2 more)
(+14 files in other folders)
